Optimize socket upload
Signed-off-by: azure <sysu.zqlong@gmail.com>

--- a/example/liteplayer_demo/CMakeLists.txt
+++ b/example/liteplayer_demo/CMakeLists.txt
@@ -34,32 +34,32 @@ set (LITECORE_SRC
     "${LITECORE_DIR}/core/audio_element.c"
     "${LITECORE_DIR}/core/audio_event_iface.c"
     "${LITECORE_DIR}/core/audio_pipeline.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/bit.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/decoder.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/fixed.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/frame.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/huffman.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/layer12.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/layer3.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/stream.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/synth.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/timer.c"
-#    "${LITECORE_DIR}/components/audio_decoder/libmad/version.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/bitstream.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/buffers.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dct32.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dequant.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dqchan.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/huffman.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/hufftabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/imdct.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3dec.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3tabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/polyphase.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/scalfact.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/stproc.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/subband.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixmp3/trigtabs.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/bit.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/decoder.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/fixed.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/frame.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/huffman.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/layer12.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/layer3.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/stream.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/synth.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/timer.c"
+    "${LITECORE_DIR}/components/audio_decoder/libmad/version.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/bitstream.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/buffers.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dct32.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dequant.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dqchan.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/huffman.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/hufftabs.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/imdct.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3dec.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3tabs.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/polyphase.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/scalfact.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/stproc.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/subband.c"
+#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/trigtabs.c"
     "${LITECORE_DIR}/components/audio_decoder/helixaac/aacdec.c"
     "${LITECORE_DIR}/components/audio_decoder/helixaac/aactabs.c"
     "${LITECORE_DIR}/components/audio_decoder/helixaac/bitstream.c"
@@ -88,8 +88,8 @@ set (LITECORE_SRC
     "${LITECORE_DIR}/components/audio_decoder/helixaac/stproc.c"
     "${LITECORE_DIR}/components/audio_decoder/helixaac/tns.c"
     "${LITECORE_DIR}/components/audio_decoder/helixaac/trigtabs.c"
-#    "${LITECORE_DIR}/components/audio_decoder/mp3_mad_wrapper.c"
-    "${LITECORE_DIR}/components/audio_decoder/mp3_helix_wrapper.c"
+    "${LITECORE_DIR}/components/audio_decoder/mp3_mad_wrapper.c"
+#    "${LITECORE_DIR}/components/audio_decoder/mp3_helix_wrapper.c"
     "${LITECORE_DIR}/components/audio_decoder/mp3_decoder.c"
     "${LITECORE_DIR}/components/audio_decoder/aac_helix_wrapper.c"
     "${LITECORE_DIR}/components/audio_decoder/aac_decoder.c"
@@ -126,10 +126,10 @@ set (MAIN_SRC
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOS_MACOSX")
 
 # ENABLE_MEMORY_LEAK_DETECT
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_MEMORY_LEAK_DETECT")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_MEMORY_LEAK_DETECT")
 
 # ENABLE_MEMORY_OVERFLOW_DETECT
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_MEMORY_OVERFLOW_DETECT")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_MEMORY_OVERFLOW_DETECT")
 
 # cflag: libmad: FPM_64BIT/FPM_INTEL/FPM_ARM/FPM_MIPS/FPM_DEFAULT
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFPM_64BIT")
