Improve resample performance for x86/amd64 platforms
Signed-off-by: sepnic <sysu.zqlong@gmail.com>

--- a/example/liteplayer_demo/CMakeLists.txt
+++ b/example/liteplayer_demo/CMakeLists.txt
@@ -248,7 +248,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFPM_64BIT")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__amd64__ -DUSE_DEFAULT_STDLIB")
 
 # cflag: libspeexdsp: FIXED_POINT/FLOATING_POINT, USE_NEON/USE_SSE
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFIXED_POINT")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLOATING_POINT -DUSE_SSE")
 
 # cflag: resampler: ENABLE_SRC, CONFIG_SRC_QUALITY
 if (ENABLE_TINYALSA)
