Add fdk-aac wrapper
Signed-off-by: azure <sysu.zqlong@gmail.com>

--- a/example/liteplayer_demo/CMakeLists.txt
+++ b/example/liteplayer_demo/CMakeLists.txt
@@ -4,230 +4,85 @@ cmake_minimum_required(VERSION 2.8)
 #set (ENABLE_TINYALSA "YES")
 
 set(TOP_DIR "${CMAKE_SOURCE_DIR}/../..")
-set(MSGUTILS_DIR "${TOP_DIR}/thirdparty/msgutils")
-set(HTTPCLIENT_DIR "${TOP_DIR}/thirdparty/httpclient")
-set(MBEDTLS_DIR "${TOP_DIR}/thirdparty/mbedtls")
-set(TINYALSA_DIR "${TOP_DIR}/thirdparty/tinyalsa")
-set(LITECORE_DIR "${TOP_DIR}/library")
-set(LITEPLAYER_DIR "${TOP_DIR}/player")
-set(LITEPLAYER_ADAPTER_DIR "${TOP_DIR}/adapter")
+set(FDK_DIR "${TOP_DIR}/library/components/audio_decoder/fdk-aac")
 
 # include files
-include_directories(${MSGUTILS_DIR}/include)
-include_directories(${HTTPCLIENT_DIR})
-include_directories(${MBEDTLS_DIR}/include)
-include_directories(${TINYALSA_DIR}/include)
-include_directories(${LITECORE_DIR}/core/include)
-include_directories(${LITECORE_DIR}/components/include)
-include_directories(${LITEPLAYER_DIR})
-include_directories(${LITEPLAYER_ADAPTER_DIR})
+include_directories(${TOP_DIR}/thirdparty/msgutils/include)
+include_directories(${TOP_DIR}/thirdparty/httpclient)
+include_directories(${TOP_DIR}/thirdparty/mbedtls/include)
+include_directories(${TOP_DIR}/thirdparty/tinyalsa/include)
 
-# source files
-set (MSGUTILS_SRC
-    ${MSGUTILS_DIR}/source/memory_detect.c
-    ${MSGUTILS_DIR}/source/msglooper.c
-    ${MSGUTILS_DIR}/source/msgqueue.c
-    ${MSGUTILS_DIR}/source/ringbuf.c
-    ${MSGUTILS_DIR}/source/smartptr.c
-    ${MSGUTILS_DIR}/source/stllist.c
-    ${MSGUTILS_DIR}/source/sw_timer.c
-    ${MSGUTILS_DIR}/source/sw_watchdog.c
-    ${MSGUTILS_DIR}/source/portable/os_logger.c
-    ${MSGUTILS_DIR}/source/portable/os_thread.c
-    ${MSGUTILS_DIR}/source/portable/os_time.c
-    ${MSGUTILS_DIR}/source/portable/os_timer.c
-)
+# include files
+include_directories(${TOP_DIR}/library/core/include)
+include_directories(${TOP_DIR}/library/components/include)
+include_directories(${TOP_DIR}/player)
+include_directories(${TOP_DIR}/adapter)
 
-# source files
-set (MBEDTLS_SRC
-    ${MBEDTLS_DIR}/library/aes.c
-    ${MBEDTLS_DIR}/library/aesni.c
-    ${MBEDTLS_DIR}/library/arc4.c
-    ${MBEDTLS_DIR}/library/asn1parse.c
-    ${MBEDTLS_DIR}/library/asn1write.c
-    ${MBEDTLS_DIR}/library/base64.c
-    ${MBEDTLS_DIR}/library/bignum.c
-    ${MBEDTLS_DIR}/library/blowfish.c
-    ${MBEDTLS_DIR}/library/camellia.c
-    ${MBEDTLS_DIR}/library/ccm.c
-    ${MBEDTLS_DIR}/library/cipher.c
-    ${MBEDTLS_DIR}/library/cipher_wrap.c
-    ${MBEDTLS_DIR}/library/cmac.c
-    ${MBEDTLS_DIR}/library/ctr_drbg.c
-    ${MBEDTLS_DIR}/library/des.c
-    ${MBEDTLS_DIR}/library/dhm.c
-    ${MBEDTLS_DIR}/library/ecdh.c
-    ${MBEDTLS_DIR}/library/ecdsa.c
-    ${MBEDTLS_DIR}/library/ecjpake.c
-    ${MBEDTLS_DIR}/library/ecp.c
-    ${MBEDTLS_DIR}/library/ecp_curves.c
-    ${MBEDTLS_DIR}/library/entropy.c
-    ${MBEDTLS_DIR}/library/entropy_poll.c
-    ${MBEDTLS_DIR}/library/error.c
-    ${MBEDTLS_DIR}/library/gcm.c
-    ${MBEDTLS_DIR}/library/havege.c
-    ${MBEDTLS_DIR}/library/hmac_drbg.c
-    ${MBEDTLS_DIR}/library/md.c
-    ${MBEDTLS_DIR}/library/md2.c
-    ${MBEDTLS_DIR}/library/md4.c
-    ${MBEDTLS_DIR}/library/md5.c
-    ${MBEDTLS_DIR}/library/md_wrap.c
-    ${MBEDTLS_DIR}/library/memory_buffer_alloc.c
-    ${MBEDTLS_DIR}/library/oid.c
-    ${MBEDTLS_DIR}/library/padlock.c
-    ${MBEDTLS_DIR}/library/pem.c
-    ${MBEDTLS_DIR}/library/pk.c
-    ${MBEDTLS_DIR}/library/pk_wrap.c
-    ${MBEDTLS_DIR}/library/pkcs12.c
-    ${MBEDTLS_DIR}/library/pkcs5.c
-    ${MBEDTLS_DIR}/library/pkparse.c
-    ${MBEDTLS_DIR}/library/pkwrite.c
-    ${MBEDTLS_DIR}/library/platform.c
-    ${MBEDTLS_DIR}/library/ripemd160.c
-    ${MBEDTLS_DIR}/library/rsa.c
-    ${MBEDTLS_DIR}/library/rsa_internal.c
-    ${MBEDTLS_DIR}/library/sha1.c
-    ${MBEDTLS_DIR}/library/sha256.c
-    ${MBEDTLS_DIR}/library/sha512.c
-    ${MBEDTLS_DIR}/library/threading.c
-    ${MBEDTLS_DIR}/library/timing.c
-    ${MBEDTLS_DIR}/library/version.c
-    ${MBEDTLS_DIR}/library/version_features.c
-    ${MBEDTLS_DIR}/library/xtea.c
-    ${MBEDTLS_DIR}/library/certs.c
-    ${MBEDTLS_DIR}/library/pkcs11.c
-    ${MBEDTLS_DIR}/library/x509.c
-    ${MBEDTLS_DIR}/library/x509_create.c
-    ${MBEDTLS_DIR}/library/x509_crl.c
-    ${MBEDTLS_DIR}/library/x509_crt.c
-    ${MBEDTLS_DIR}/library/x509_csr.c
-    ${MBEDTLS_DIR}/library/x509write_crt.c
-    ${MBEDTLS_DIR}/library/x509write_csr.c
-    ${MBEDTLS_DIR}/library/debug.c
-    ${MBEDTLS_DIR}/library/net_sockets.c
-    ${MBEDTLS_DIR}/library/ssl_cache.c
-    ${MBEDTLS_DIR}/library/ssl_ciphersuites.c
-    ${MBEDTLS_DIR}/library/ssl_cli.c
-    ${MBEDTLS_DIR}/library/ssl_cookie.c
-    ${MBEDTLS_DIR}/library/ssl_srv.c
-    ${MBEDTLS_DIR}/library/ssl_ticket.c
-    ${MBEDTLS_DIR}/library/ssl_tls.c
-)
-
-# source files
-set (HTTPCLIENT_SRC
-    ${HTTPCLIENT_DIR}/httpclient.c
-)
+# include files
+include_directories(${FDK_DIR}/libAACdec/include)
+include_directories(${FDK_DIR}/libPCMutils/include)
+include_directories(${FDK_DIR}/libFDK/include)
+include_directories(${FDK_DIR}/libSYS/include)
+include_directories(${FDK_DIR}/libMpegTPDec/include)
+include_directories(${FDK_DIR}/libSBRdec/include)
+include_directories(${FDK_DIR}/libArithCoding/include)
+include_directories(${FDK_DIR}/libDRCdec/include)
+include_directories(${FDK_DIR}/libSACdec/include)
 
 # source files
 if (ENABLE_TINYALSA)
-set (TINYALSA_SRC
-    ${TINYALSA_DIR}/pcm.c
-    ${TINYALSA_DIR}/mixer.c
+file(GLOB THIRDPARTY_SRC src
+    ${TOP_DIR}/thirdparty/msgutils/source/*.c
+    ${TOP_DIR}/thirdparty/msgutils/source/portable/*.c
+    ${TOP_DIR}/thirdparty/mbedtls/library/*.c
+    ${TOP_DIR}/thirdparty/httpclient/*.c
+    ${TOP_DIR}/thirdparty/tinyalsa/pcm.c
+    ${TOP_DIR}/thirdparty/tinyalsa/mixer.c
 )
-endif()
-
-# source files
-set (LITECORE_SRC
-    "${LITECORE_DIR}/core/audio_element.c"
-    "${LITECORE_DIR}/core/audio_event_iface.c"
-    "${LITECORE_DIR}/core/audio_pipeline.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/bit.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/decoder.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/fixed.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/frame.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/huffman.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/layer12.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/layer3.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/stream.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/synth.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/timer.c"
-    "${LITECORE_DIR}/components/audio_decoder/libmad/version.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/bitstream.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/buffers.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dct32.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dequant.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/dqchan.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/huffman.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/hufftabs.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/imdct.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3dec.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/mp3tabs.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/polyphase.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/scalfact.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/stproc.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/subband.c"
-#    "${LITECORE_DIR}/components/audio_decoder/helixmp3/trigtabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/aacdec.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/aactabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/bitstream.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/buffers.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/dct4.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/decelmnt.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/dequant.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/fft.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/filefmt.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/huffman.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/hufftabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/imdct.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/noiseless.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/pns.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbr.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrfft.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrfreq.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrhfadj.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrhfgen.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrhuff.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrimdct.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrmath.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrqmf.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrside.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/sbrtabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/stproc.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/tns.c"
-    "${LITECORE_DIR}/components/audio_decoder/helixaac/trigtabs.c"
-    "${LITECORE_DIR}/components/audio_decoder/mp3_mad_wrapper.c"
-#    "${LITECORE_DIR}/components/audio_decoder/mp3_helix_wrapper.c"
-    "${LITECORE_DIR}/components/audio_decoder/mp3_decoder.c"
-    "${LITECORE_DIR}/components/audio_decoder/aac_helix_wrapper.c"
-    "${LITECORE_DIR}/components/audio_decoder/aac_decoder.c"
-    "${LITECORE_DIR}/components/audio_decoder/m4a_decoder.c"
-    "${LITECORE_DIR}/components/audio_decoder/wav_decoder.c"
-    "${LITECORE_DIR}/components/audio_extractor/mp3_extractor.c"
-    "${LITECORE_DIR}/components/audio_extractor/aac_extractor.c"
-    "${LITECORE_DIR}/components/audio_extractor/m4a_extractor.c"
-    "${LITECORE_DIR}/components/audio_extractor/wav_extractor.c"
-    "${LITECORE_DIR}/components/audio_resampler/libspeexdsp/resample.c"
-    "${LITECORE_DIR}/components/audio_resampler/audio_resampler.c"
-    "${LITECORE_DIR}/components/audio_stream/fatfs_stream.c"
-    "${LITECORE_DIR}/components/audio_stream/sink_stream.c"
-    "${LITECORE_DIR}/components/audio_stream/http_stream.c"
-)
-
-# source files
-set (LITEPLAYER_SRC
-    ${LITEPLAYER_DIR}/liteplayer_source.c
-    ${LITEPLAYER_DIR}/liteplayer_parser.c
-    ${LITEPLAYER_DIR}/liteplayer_debug.c
-    ${LITEPLAYER_DIR}/liteplayer_main.c
-)
-
-# source files
-if (ENABLE_TINYALSA)
-set (MAIN_SRC
-    ${LITEPLAYER_ADAPTER_DIR}/httpclient_wrapper.c
-    ${LITEPLAYER_ADAPTER_DIR}/fatfs_wrapper.c
-    ${LITEPLAYER_ADAPTER_DIR}/tinyalsa_wrapper.c
-    ${CMAKE_SOURCE_DIR}/liteplayer_demo.c
+set (ADAPTER_SRC
+    ${TOP_DIR}/adapter/httpclient_wrapper.c
+    ${TOP_DIR}/adapter/fatfs_wrapper.c
+    ${TOP_DIR}/adapter/tinyalsa_wrapper.c
 )
 else()
-set (MAIN_SRC
-    ${LITEPLAYER_ADAPTER_DIR}/httpclient_wrapper.c
-    ${LITEPLAYER_ADAPTER_DIR}/fatfs_wrapper.c
-    ${LITEPLAYER_ADAPTER_DIR}/wave_wrapper.c
-    ${CMAKE_SOURCE_DIR}/liteplayer_demo.c
+file(GLOB THIRDPARTY_SRC src
+    ${TOP_DIR}/thirdparty/msgutils/source/*.c
+    ${TOP_DIR}/thirdparty/msgutils/source/portable/*.c
+    ${TOP_DIR}/thirdparty/mbedtls/library/*.c
+    ${TOP_DIR}/thirdparty/httpclient/*.c
+)
+set (ADAPTER_SRC
+    ${TOP_DIR}/adapter/httpclient_wrapper.c
+    ${TOP_DIR}/adapter/fatfs_wrapper.c
+    ${TOP_DIR}/adapter/wave_wrapper.c
 )
 endif()
+
+# source files
+file(GLOB LITEPLAYER_SRC src
+    ${TOP_DIR}/library/core/*.c
+    ${TOP_DIR}/library/components/audio_decoder/libmad/*.c
+    ${FDK_DIR}/libAACdec/src/*.cpp
+    ${FDK_DIR}/libPCMutils/src/*.cpp
+    ${FDK_DIR}/libFDK/src/*.cpp
+    ${FDK_DIR}/libSYS/src/*.cpp
+    ${FDK_DIR}/libMpegTPDec/src/*.cpp
+    ${FDK_DIR}/libSBRdec/src/*.cpp
+    ${FDK_DIR}/libArithCoding/src/*.cpp
+    ${FDK_DIR}/libDRCdec/src/*.cpp
+    ${FDK_DIR}/libSACdec/src/*.cpp
+    ${TOP_DIR}/library/components/audio_decoder/mp3_mad_wrapper.c
+    ${TOP_DIR}/library/components/audio_decoder/mp3_decoder.c
+    ${TOP_DIR}/library/components/audio_decoder/aac_fdk_wrapper.c
+    ${TOP_DIR}/library/components/audio_decoder/aac_decoder.c
+    ${TOP_DIR}/library/components/audio_decoder/m4a_decoder.c
+    ${TOP_DIR}/library/components/audio_decoder/wav_decoder.c
+    ${TOP_DIR}/library/components/audio_extractor/*.c
+    ${TOP_DIR}/library/components/audio_resampler/libspeexdsp/resample.c
+    ${TOP_DIR}/library/components/audio_resampler/audio_resampler.c
+    ${TOP_DIR}/library/components/audio_stream/*.c
+    ${TOP_DIR}/player/*.c
+)
 
 # cflags: OS_LINUX, OS_ANDROID, OS_MACOSX, OS_IOS, OS_FREERTOS
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOS_MACOSX")
@@ -260,7 +115,7 @@ if (ENABLE_TINYALSA)
 endif()
 
 # cflags: compile paramters
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -g -Wall -Werror -Wno-error=pointer-to-int-cast -Wno-error=int-to-pointer-cast")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -g -Wall -Werror -Wno-error=unused-function")
 
 # ldflags
 set(CMAKE_LDFLAGS "${CMAKE_LDFLAGS} -Wl,-O1 -Wl,--hash-style=gnu -Wl,--as-needed")
@@ -268,5 +123,5 @@ set(CMAKE_LDFLAGS "${CMAKE_LDFLAGS} -Wl,-O1 -Wl,--hash-style=gnu -Wl,--as-needed
 #message("CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
 
 # liteplayer_demo
-add_executable(liteplayer_demo ${MAIN_SRC} ${MSGUTILS_SRC} ${HTTPCLIENT_SRC} ${MBEDTLS_SRC} ${TINYALSA_SRC} ${LITECORE_SRC} ${LITEPLAYER_SRC})
+add_executable(liteplayer_demo liteplayer_demo.c ${THIRDPARTY_SRC} ${LITEPLAYER_SRC} ${ADAPTER_SRC})
 target_link_libraries(liteplayer_demo pthread m)
