Add liteplayer manager, support local playlist
Signed-off-by: azure <sysu.zqlong@gmail.com>

--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -90,6 +90,7 @@ set (LITEPLAYER_SRC
     ${TOP_DIR}/player/liteplayer_parser.c
     ${TOP_DIR}/player/liteplayer_debug.c
     ${TOP_DIR}/player/liteplayer_main.c
+    ${TOP_DIR}/player/liteplayer_manager.c
 )
 
 # cflags: OS_LINUX, OS_ANDROID, OS_MACOSX, OS_IOS, OS_FREERTOS
