Add pvmp3 wrapper
Signed-off-by: azure <sysu.zqlong@gmail.com>

--- a/example/liteplayer_demo/CMakeLists.txt
+++ b/example/liteplayer_demo/CMakeLists.txt
@@ -19,6 +19,8 @@ include_directories(${TOP_DIR}/player)
 include_directories(${TOP_DIR}/adapter)
 
 # include files
+include_directories(${TOP_DIR}/thirdparty/codec/mp3-pvmp3/include)
+include_directories(${TOP_DIR}/thirdparty/codec/mp3-pvmp3/src)
 include_directories(${TOP_DIR}/thirdparty/codec/aac-fdk/libAACdec/include)
 include_directories(${TOP_DIR}/thirdparty/codec/aac-fdk/libPCMutils/include)
 include_directories(${TOP_DIR}/thirdparty/codec/aac-fdk/libFDK/include)
@@ -35,7 +37,7 @@ file(GLOB THIRDPARTY_SRC src
     ${TOP_DIR}/thirdparty/msgutils/source/portable/*.c
     ${TOP_DIR}/thirdparty/mbedtls/library/*.c
     ${TOP_DIR}/thirdparty/httpclient/*.c
-    ${TOP_DIR}/thirdparty/codec/mp3-mad/*.c
+    ${TOP_DIR}/thirdparty/codec/mp3-pvmp3/src/*.cpp
     ${TOP_DIR}/thirdparty/codec/aac-fdk/libAACdec/src/*.cpp
     ${TOP_DIR}/thirdparty/codec/aac-fdk/libPCMutils/src/*.cpp
     ${TOP_DIR}/thirdparty/codec/aac-fdk/libFDK/src/*.cpp
@@ -74,20 +76,29 @@ if (ENABLE_TINYALSA)
 endif()
 
 # source files
-file(GLOB LITEPLAYER_SRC src
-    ${TOP_DIR}/library/core/*.c
-    ${TOP_DIR}/library/components/audio_extractor/*.c
-    ${TOP_DIR}/library/components/audio_stream/*.c
-    ${TOP_DIR}/player/*.c
-)
-list(APPEND LITEPLAYER_SRC
-    ${TOP_DIR}/library/components/audio_decoder/mp3_mad_wrapper.c
+set (LITEPLAYER_SRC
+    ${TOP_DIR}/library/core/audio_element.c
+    ${TOP_DIR}/library/core/audio_event_iface.c
+    ${TOP_DIR}/library/core/audio_pipeline.c
+    ${TOP_DIR}/library/components/audio_decoder/mp3_pvmp3_wrapper.c
     ${TOP_DIR}/library/components/audio_decoder/mp3_decoder.c
     ${TOP_DIR}/library/components/audio_decoder/aac_fdk_wrapper.c
     ${TOP_DIR}/library/components/audio_decoder/aac_decoder.c
     ${TOP_DIR}/library/components/audio_decoder/m4a_decoder.c
     ${TOP_DIR}/library/components/audio_decoder/wav_decoder.c
+    ${TOP_DIR}/library/components/audio_extractor/mp3_extractor.c
+    ${TOP_DIR}/library/components/audio_extractor/aac_extractor.c
+    ${TOP_DIR}/library/components/audio_extractor/m4a_extractor.c
+    ${TOP_DIR}/library/components/audio_extractor/wav_extractor.c
     ${TOP_DIR}/library/components/audio_resampler/audio_resampler.c
+    ${TOP_DIR}/library/components/audio_stream/file_stream.c
+    ${TOP_DIR}/library/components/audio_stream/sink_stream.c
+    ${TOP_DIR}/library/components/audio_stream/http_stream.c
+    ${TOP_DIR}/player/liteplayer_source.c
+    ${TOP_DIR}/player/liteplayer_parser.c
+    ${TOP_DIR}/player/liteplayer_debug.c
+    ${TOP_DIR}/player/liteplayer_main.c
+    ${TOP_DIR}/player/liteplayer_manager.c
 )
 
 # cflags: OS_LINUX, OS_ANDROID, OS_MACOSX, OS_IOS, OS_FREERTOS
@@ -98,12 +109,6 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOS_MACOSX")
 
 # ENABLE_MEMORY_OVERFLOW_DETECT
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_MEMORY_OVERFLOW_DETECT")
-
-# cflag: libmad: FPM_64BIT/FPM_INTEL/FPM_ARM/FPM_MIPS/FPM_DEFAULT
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFPM_64BIT")
-
-# cflag: helix: __arm__/__amd64__, __GNUC__
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__amd64__ -DUSE_DEFAULT_STDLIB")
 
 # cflag: if enable aac sbr
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAAC_ENABLE_SBR")
